--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@sberdevices/assistant-client": "^2.10.0",
     "@sberdevices/plasma-icons": "^1.0.0-rc.1",
     "@sberdevices/plasma-tokens": "^1.0.0-rc.4",
